# autoglue

./: .gitignore  CMakeLists.txt  README.md  build.py
autoglue/: AutoglueConfig.cmake.in  Backend.cc  BindingGenerator.cc  CMakeLists.txt  CallableTypeEntity.cc  ClassEntity.cc  Deserializer.cc  Entity.cc  EnumEntity.cc  EnumEntryEntity.cc  FileList.cc  FunctionEntity.cc  FunctionGroupEntity.cc  PrimitiveEntity.cc  ScopeEntity.cc  Serializer.cc  TypeAliasEntity.cc  TypeEntity.cc  TypeReferenceEntity.cc
autoglue/include/autoglue/: Backend.hh  BindingGenerator.hh  CallableTypeEntity.hh  ClassEntity.hh  Deserializer.hh  Entity.hh  EntityContext.hh  EnumEntity.hh  EnumEntryEntity.hh  FileList.hh  FunctionEntity.hh  FunctionGroupEntity.hh  PrimitiveEntity.hh  ScopeEntity.hh  Serializer.hh  TypeAliasEntity.hh  TypeEntity.hh  TypeReferenceEntity.hh
clang/: Backend.cc  CMakeLists.txt  EntityContext.cc  FunctionContext.cc  GlueGenerator.cc  OverloadContext.cc  README.md  TyperefContext.cc
clang/include/autoglue/clang/: Backend.hh  EntityContext.hh  FunctionContext.hh  GlueGenerator.hh  IncludeContext.hh  OverloadContext.hh  TypeContext.hh  TyperefContext.hh
cmake/: AutoglueConfig.cmake.in  Common.cmake  CreateConfig.cmake
csharp/: CMakeLists.txt
csharp/backend/: CMakeLists.txt
csharp/backend/include/autoglue/csharp/: Backend.hh
csharp/generator/: BindingGenerator.cc  CMakeLists.txt  ClassContext.cc  EntityContext.cc
csharp/generator/include/autoglue/csharp/: BindingGenerator.hh  ClassContext.hh  EntityContext.hh
docs/: class_extension.md  design.md  virtual_pattern.md
java/: CMakeLists.txt
java/generator/: BindingGenerator.cc  CMakeLists.txt
java/generator/include/autoglue/java/: BindingGenerator.hh
serialization/backend/: Backend.cc  CMakeLists.txt
serialization/backend/include/autoglue/serialization/: Backend.hh
test/: AutoglueConfig.cmake  CMakeLists.txt  README.md  gen_autoglue.sh  main.cc
test/headers/: TestClass.hh
test/headers/nested/: OtherClass.hh
test/sandbox/: CMakeLists.txt  generate_autoglue.py  main.cc
xml/: CMakeLists.txt
xml/backend/: CMakeLists.txt  Deserializer.cc
xml/backend/include/autoglue/xml/: Deserializer.hh
xml/generator/: CMakeLists.txt  Serializer.cc
xml/generator/include/autoglue/xml/: Serializer.hh
